[package]
name = "send-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.7", features = ["attributes", "tokio1", "unstable"] }
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
